Started a camera class. Will continue after the student crap is over.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ Lite_Component_Lek/.vs/Lite_Component_Lek/v15/ipch/AutoPCH/LITE_COMPONENT_LEK-64
 Lite_Component_Lek/.vs/Lite_Component_Lek/v15/ipch/AutoPCH/LITE_COMPONENT_LEK-64a218c8/D3DHEADER-2202258d/D3DHEADER.ipch
 Lite_Component_Lek/.vs/Lite_Component_Lek/v15/ipch/AutoPCH/LITE_COMPONENT_LEK-64a218c8/COMPONENT-7548dc77/COMPONENT.ipch
 Lite_Component_Lek/Lite_Component_Lek/Debug/
+Lite_Component_Lek/.vs/Lite_Component_Lek/v15/
+Lite_Component_Lek/Debug/
