--- a/Lite_Component_Lek/Lite_Component_Lek/Lite_Component_Lek.vcxproj.filters
+++ b/Lite_Component_Lek/Lite_Component_Lek/Lite_Component_Lek.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="Mesh.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="ShaderHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -68,8 +74,19 @@
     <ClInclude Include="ShaderHandler.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="VertexShader.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="PixelShader.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
