--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ Lite_Component_Lek/.vs/Lite_Component_Lek/v15/ipch/AutoPCH/LITE_COMPONENT_LEK-64
 Lite_Component_Lek/Lite_Component_Lek/Debug/
 Lite_Component_Lek/.vs/Lite_Component_Lek/v15/
 Lite_Component_Lek/Debug/
+Lite_Component_Lek/Lite_Component_Lek.opensdf
+Lite_Component_Lek/Lite_Component_Lek.sdf
