--- a/Lite_Component_Lek/Lite_Component_Lek/Lite_Component_Lek.vcxproj
+++ b/Lite_Component_Lek/Lite_Component_Lek/Lite_Component_Lek.vcxproj
@@ -145,10 +145,12 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Component.cpp" />
+    <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GraphicsHandler.cpp" />
     <ClCompile Include="KeyboardMovement.cpp" />
+    <ClCompile Include="LightHandler.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Position.cpp" />
@@ -160,11 +162,13 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="D3DHeader.h" />
+    <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GraphicsHandler.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="KeyboardMovement.h" />
+    <ClInclude Include="LightHandler.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="ShaderHandler.h" />
