--- a/Lite_Component_Lek/Lite_Component_Lek/Lite_Component_Lek.vcxproj.filters
+++ b/Lite_Component_Lek/Lite_Component_Lek/Lite_Component_Lek.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="LightHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PointLight.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -112,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="LightHandler.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PointLight.h">
+      <Filter>Header Files\Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
