--- a/Lite_Component_Lek/Lite_Component_Lek/Lite_Component_Lek.vcxproj
+++ b/Lite_Component_Lek/Lite_Component_Lek/Lite_Component_Lek.vcxproj
@@ -144,11 +144,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CollisionBox.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GraphicsHandler.cpp" />
+    <ClCompile Include="Gravity.cpp" />
     <ClCompile Include="KeyboardMovement.cpp" />
     <ClCompile Include="LightHandler.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -162,12 +164,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CollisionBox.h" />
     <ClInclude Include="D3DHeader.h" />
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GraphicsHandler.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="Gravity.h" />
     <ClInclude Include="KeyboardMovement.h" />
     <ClInclude Include="LightHandler.h" />
     <ClInclude Include="Mesh.h" />
